--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "closeio/use-infinite-scroll",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
   "jsnext:main": "dist/index.es.js",
   "engines": {
     "node": ">=8",
@@ -15,7 +16,7 @@
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "build": "rollup -c",
+    "build": "tsc --outDir dist --declarationDir dist --declaration true && rollup -c",
     "start": "rollup -c -w",
     "prepare": "yarn build",
     "deploy": "cd example && yarn && gh-pages -d build -u \"github-actions-bot <support+actions@github.com>\""
@@ -29,8 +30,11 @@
     "@babel/core": "^7.6.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@svgr/rollup": "^4.3.3",
     "@testing-library/react-hooks": "^3.2.1",
+    "@types/react": "^16.9.50",
+    "@types/react-dom": "^16.9.8",
     "cross-env": "^6.0.3",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
@@ -47,7 +51,8 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-url": "^3.0.0"
+    "rollup-plugin-url": "^3.0.0",
+    "typescript": "^4.0.3"
   },
   "files": [
     "dist"
